--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,36 +2,40 @@
 
 {% block content %}
     <div class="post">
+        <h2>{{ post.title }}</h2>
         {% if post.published_date %}
             <div class="date">
-                {{ post.published_date }}
+                ({{ post.published_date }} | {{ post.author }})
             </div>
-        {% else %}
-            <a class="btn btn-default"  href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+        {% elif user == post.author %}
+            <a class="btn btn-default"  href="{% url 'post_publish' pk=post.pk %}">Publish</a> |
         {% endif %}
 
-        {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+        {% if user == post.author %}
+            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">edit</a> |
+            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">delete</a>
   		{% endif %}
-        <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
     <hr>
     <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
     {% for comment in post.comments.all %}
-        {% if user.is_authenticated or comment.approved_comment %}
-        <div class="comment">
-            <div class="date">
-                {{ comment.created_date }}
-                {% if not comment.approved_comment %}
-                    <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
-                    <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
-                {% endif %}
-            </div>
-            <strong>{{ comment.author }}</strong>
-            <p>{{ comment.text|linebreaks }}</p>
-        </div>
+        {% if user.is_authenticated or not comment.hide_comment %}
+            <div class="comment">
+                <div>
+                    <strong>{{ comment.author }}</strong> | {{ comment.created_date }}
+                    {% if user.is_authenticated %}
+                    <div>
+                        {% if not comment.hide_comment %}
+                            <a class="btn btn-default" href="{% url 'comment_hide' pk=comment.pk %}">hide</a>
+                        {% else %}
+                            <a class="btn btn-default" href="{% url 'comment_hide' pk=comment.pk %}">unhide</a>
+                        {% endif %}
+                    </div>
+                    {% endif %}
+                </div>
+                <p>{{ comment.text|linebreaks }}</p>
+            </div>    
         {% endif %}
     {% empty %}
         <p>No comments here yet :(</p>
