--- a/templates/base.html
+++ b/templates/base.html
@@ -1,33 +1,41 @@
 {% load static %}
 <html>
     <head>
-        <title>Mohit's blog</title>
-		<!-- <link rel="stylesheet" href="{% static 'css/blog.css' %}"> -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>View Point</title>
+		<link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
     <body>
-        <header>
-            <h1><a href="/">Django Girls Blog</a></h1>
+        <header class="wrapper">
+            <h1><a href="/">View Point</a></h1>
+            <p>Share your thoughts through blog</p>
+            <hr>
             <nav>
                 <ul>
                     {% if user.is_authenticated %}
-                        <p>Hello {{ user.username }}</p>
-                        <a href="{% url 'post_new' %}">Create new post</a>
-                        <a href="{% url 'post_draft_list' %}">Drafts</a>
-                        <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
+                        <li><p>Hello {{ user.username }} |</p></li>
+                        <li><a href="{% url 'post_new' %}">Create new post</a></li> |
+                        <li><a href="{% url 'post_draft_list' %}">Drafts</a></li> |
+                        <li><form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
                             {% csrf_token %}
                             <button type="submit">Logout</button>
-                        </form>
+                        </form></li>
                     {% else %}
-                        <a href="{% url 'accounts:login' %}">Login to create new post</a>
-                        <a href="{% url 'accounts:signup' %}">Signup</a>
+                        <li><a href="{% url 'accounts:login' %}">Login to create new post</a></li> |
+                        <li><a href="{% url 'accounts:signup' %}">Signup</a></li>
                     {% endif %}
                 </ul>
             </nav>
         </header>
         <hr>
-        <div class="content container">
+        <div class="wrapper">
             {% block content %}
             {% endblock %} 
         </div>
+        <hr>
+        <footer>
+            <p>made by mohit</p>
+        </footer>
     </body>
 </html>
