--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,13 +1,3 @@
-body {
-    background-color: #0f121f;
-    background-repeat: no-repeat;
-    color: #fff;
-}
-
-body *{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 h1, h2{
     font-weight: normal;
     margin: 0;
@@ -18,7 +8,6 @@ p {
 }
 
 a{
-    color: #fff;
     text-decoration: none;
 }
 
@@ -36,12 +25,27 @@ nav li{
     align-content: flex-end;
 }
 
-body > header > nav > ul > li:nth-child(4) > form > button {
-    background: none;
-    color: #fff;
+ul{
+    margin-top: 0em;
+    margin-bottom: 0em;
 }
 
-body > header > nav > ul > li:nth-child(4) > form > button:hover{
-    background-color: #fff;
-    color: black;
+body > header > nav > ul > li:nth-child(1) > p{
+    margin-top: 0em;
+    margin-bottom: 0em;
+}
+
+body > header > nav > ul{
+    padding: 0em;
+    margin: 0em;
+}
+
+body > footer > p{
+    text-align: center;
+}
+
+body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
